snapshot-tests/tests/snapshots/parser__bad_booleans__true_trailing.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Wanted]: expected newline, found an identifier at foo
  ┌─ true_trailing:1:11
  │
1 │ foo = true2
  │           ^ expected newline
